<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, SocialMeActivity!</string>
    <string name="app_name">SocialMe</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="cancel">Cancel</string>
    
    <string name="signup_required">Sign up</string>
    <string name="signup_descr">Not a member, please sign up</string>
    <string name="login_info">Login Info</string>
</resources>
