<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent">
	<TableLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:stretchColumns="*">
		<TableRow android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<TextView android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:text="@string/firstName" />
			<EditText android:id="@+id/firstName" android:layout_width="wrap_content"
				android:layout_height="wrap_content"  />
		</TableRow>
		<TableRow android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<TextView android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:text="@string/lastName" />
			<EditText android:id="@+id/lastName" android:layout_width="wrap_content"
				android:layout_height="wrap_content"  />
		</TableRow>
		<TableRow android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<TextView android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:text="@string/username" />
			<EditText android:id="@+id/username" android:layout_width="fill_parent"
				android:layout_height="wrap_content" />
		</TableRow>
		<TableRow android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<TextView android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:text="@string/password" />
			<EditText android:id="@+id/password" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:inputType="textPassword" />
		</TableRow>
		<TableRow android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<Button android:id="@+id/signup" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:text="@string/signup" />
			<Button android:id="@+id/cancel" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:text="@string/cancel" />
		</TableRow>

	</TableLayout>
</LinearLayout>
